# 2DRayCasting

./: .gitignore  .gitmodules  2D Raycasting.sln  2D Raycasting.vcxproj  2D Raycasting.vcxproj.filters  CMakeLists.txt  README.md  RayCasting.sln  premake5.lua
2DRayCasting/: 2DRayCasting.vcxproj  2DRayCasting.vcxproj.filters
2DRayCasting/res/Shaders/: default.frag  default.vert
2DRayCasting/src/: Application.cpp  Simulation.cpp  Simulation.h
res/: CMakeLists.txt
res/Shaders/: CMakeLists.txt  default.frag  floor.frag  floor.vert  light.frag  light.vert  line.vert  mazing.frag  spacetime.frag
src/: AngleCaster.cpp  AngleCaster.h  Application.cpp  Boundary.cpp  Boundary.h  CMakeLists.txt  Caster.cpp  Caster.h  EndPointCaster.cpp  EndPointCaster.h  GLUtils.h  Geometrics.cpp  Geometrics.h  Shader.cpp  Shader.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h  VertexArray.cpp  VertexArray.h  pch.h  rcpch.cpp  rcpch.h
src/Casters/: AngleCaster.cpp  AngleCaster.h  AngleCaster.hpp  Caster.cpp  Caster.h  Caster.hpp  EndPointCaster.cpp  EndPointCaster.h  EndPointCaster.hpp
src/Core/: Simulation.cpp  Simulation.h  Simulation.hpp  Utils.cpp  Utils.h
src/Math/: Boundary.cpp  Boundary.h  Geometrics.cpp  Geometrics.h  Geometrics.hpp
src/Primitives/: Boundary.cpp  Boundary.hpp  Floor.cpp  Floor.h  Floor.hpp  FloorTexture.cpp  FloorTexture.hpp  NodeRenderer.hpp  Quad.cpp  Quad.h  Quad.hpp
src/Renderer/: Buffer.hpp  Framebuffer.cpp  Framebuffer.h  Framebuffer.hpp  GLDebug.cpp  GLDebug.h  GLUtils.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/app/: Application.cpp  CMakeLists.txt  pch.hpp
src/app/Casters/: AngleCaster.cpp  AngleCaster.hpp  Caster.cpp  Caster.hpp  EndPointCaster.cpp  EndPointCaster.hpp
src/app/Core/: Simulation.cpp  Simulation.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp
src/app/Math/: Geometrics.cpp  Geometrics.hpp
src/app/Primitives/: Floor.cpp  Floor.hpp  FloorTexture.cpp  FloorTexture.hpp  NodeRenderer.hpp  Quad.cpp  Quad.hpp
src/lwvl/: Buffer.hpp  CMakeLists.txt  Debug.cpp  Framebuffer.cpp  Framebuffer.hpp  Shader.cpp  Shader.hpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
